--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,12 @@ android {
         dataBinding true
     }
     namespace 'com.android.randomstory'
+
+    lintOptions {
+
+        checkReleaseBuilds false
+
+    }
 }
 
 dependencies {
@@ -46,9 +52,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-auth:22.3.0'
+    implementation 'com.google.firebase:firebase-auth:22.3.1'
     implementation 'com.google.firebase:firebase-database:20.3.0'
-    implementation 'com.google.firebase:firebase-messaging:23.4.0'
+    implementation 'com.google.firebase:firebase-messaging:23.4.1'
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'com.google.firebase:firebase-storage:20.3.0'
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
@@ -66,7 +72,7 @@ dependencies {
     implementation 'com.orhanobut:dialogplus:1.11@aar'
 
 
-    def lottieVersion = "3.4.0"
-    implementation "com.airbnb.android:lottie:$lottieVersion"
+    def lottieVersion = '3.4.0'
+    implementation 'com.airbnb.android:lottie:6.3.0'
 
 }
